Front_online_data

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-#VITE_BACKEND_BASE_URL=https://backend-app-k52v.onrender.com
-VITE_BACKEND_BASE_URL=http://192.168.1.5:8000
+VITE_BACKEND_BASE_URL=https://paper-trading-backend-sqllite.onrender.com
+#VITE_BACKEND_BASE_URL=http://192.168.1.5:8000
 # or your custom domain:
-# VITE_BACKEND_BASE_URL=https://api.neurocrest.in
+#VITE_BACKEND_BASE_URL=https://api.neurocrest.in
