--- a/package.json
+++ b/package.json
@@ -34,14 +34,11 @@
     "autoprefixer": "^10.4.0",
     "cross-env": "^10.1.0",
     "postcss": "^8.4.0",
-    "rollup": "3.29.4",
+    "rollup": "^4.24.0",
     "tailwindcss": "^3.4.0",
     "vite": "^5.4.0"
   },
-  "engines": {
-    "node": ">=20"
-  },
   "overrides": {
-    "rollup": "3.29.4"
+    "@rollup/rollup-win32-x64-msvc": "npm:@rollup/rollup-linux-x64-gnu@4.24.0"
   }
 }
