--- a/.env
+++ b/.env
@@ -1,14 +1,10 @@
 # Google OAuth client ID for frontend
 VITE_GOOGLE_CLIENT_ID=748878157846-86kcgvmlfgb37sl4hu8h2164d6sl5niq.apps.googleusercontent.com
 VITE_BACKEND_BASE_URL=https://paper-trading-backend-sqllite.onrender.com
-#VITE_BACKEND_URL=https://paper-trading-backend-sqllite.onrender.com
+VITE_BACKEND_URL=https://paper-trading-backend-sqllite.onrender.com
 
 # for local env testing
 
-<<<<<<< HEAD
 #VITE_BACKEND_BASE_URL=http://192.168.1.5:8000
 #VITE_BACKEND_URL=http://192.168.1.5:8000
-=======
-#VITE_BACKEND_BASE_URL=http://localhost:8000
-#VITE_BACKEND_URL=http://localhost:8000
->>>>>>> 5299f6aa9e5a738d21d4ffce0dfdede11b50ca90
+
