--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
-VITE_BACKEND_BASE_URL=https://<your-service>.onrender.com
+VITE_BACKEND_BASE_URL=https://backend-app-k52v.onrender.com
 # or your custom domain:
 # VITE_BACKEND_BASE_URL=https://api.neurocrest.in
