--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "android:emulator": "npm run build:emulator && npx cap copy android && npx cap run android"
   },
   "dependencies": {
+    "@capacitor-community/http": "^1.4.1",
+    "@capacitor/android": "^5.7.8",
+    "@capacitor/core": "^5.7.8",
     "@react-oauth/google": "^0.12.2",
     "@stripe/react-stripe-js": "^4.0.2",
     "@stripe/stripe-js": "^7.9.0",
@@ -34,8 +37,11 @@
     "autoprefixer": "^10.4.0",
     "cross-env": "^10.1.0",
     "postcss": "^8.4.0",
-    "rollup": "^4.22.0",
+    "rollup": "3.29.4",
     "tailwindcss": "^3.4.0",
     "vite": "^5.4.0"
+  },
+  "engines": {
+    "node": ">=20"
   }
 }
