--- a/package.json
+++ b/package.json
@@ -21,15 +21,18 @@
     "file-saver": "^2.0.5",
     "framer-motion": "^12.23.0",
     "jwt-decode": "^3.1.2",
+    "lightweight-charts": "^5.1.0",
     "lucide-react": "^0.525.0",
     "react": "^18.0.0",
     "react-chartjs-2": "^5.3.0",
+    "react-datepicker": "^9.1.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.30.1",
     "react-toastify": "^11.0.5",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@rollup/rollup-win32-x64-msvc": "^4.52.4",
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.0",
