--- a/package.json
+++ b/package.json
@@ -35,16 +35,14 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@rollup/rollup-win32-x64-msvc": "^4.52.4",
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.0",
     "cross-env": "^10.1.0",
     "postcss": "^8.4.0",
-    "rollup": "3.29.4",
     "tailwindcss": "^3.4.0",
     "vite": "^5.4.0"
   },
   "engines": {
-    "node": ">=20"
+    "node": "22.x"
   }
 }
