--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^9.1.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.1",
     "react-toastify": "^11.0.5",
     "xlsx": "^0.18.5"
