--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "file-saver": "^2.0.5",
     "framer-motion": "^12.23.0",
     "jwt-decode": "^3.1.2",
-    "lightweight-charts": "^5.1.0",
+    "lightweight-charts": "4.2.3",
     "lucide-react": "^0.525.0",
     "react": "^18.0.0",
     "react-chartjs-2": "^5.3.0",
