--- a/.env.production
+++ b/.env.production
@@ -1,7 +1,6 @@
-<<<<<<< HEAD
+
 VITE_BACKEND_BASE_URL=https://backend-app-k52v.onrender.com
-=======
-VITE_BACKEND_BASE_URL=https://paper-trading-backend-sqllite.onrender.com
->>>>>>> 6c42a83969e64dded0190e1fc5cbd41fda1a4d53
+#VITE_BACKEND_BASE_URL=https://paper-trading-backend-sqllite.onrender.com
+
 # or your custom domain:
 # VITE_BACKEND_BASE_URL=https://api.neurocrest.in
